# Guesstimate-Agent

./: .gitignore  README.md  SETUP.md  claude_desktop_config.json  requirements.txt
GuesstimateMCP/: README.md  pyproject.toml
GuesstimateMCP/src/guesstimatemcp/: http_server.py  server.py
agents/: .env.example  pyproject.toml
agents/src/guesstimate_agent/: __init__.py  agent.py  main.py
